 -Fix issue with predictor/outcome dialogs not updating when Study Group Manager autoloads last study group.
 -Rename cohort" to "study group" in Cohort Manager Analytics Popup. (#716)
 -Fix issue saving outcome variable filters in cross-sectional studies. (#712)
 -Allow user to customize study group colors and patterns in Data Analytics. (#651)
 -Make scrollbars always visible on Macs.

1.0.10 (January 24, 2022)
 -Fix issue with automated analysis mode freezing on Cohort Manager/create cohorts step. (#648)
 -Fix issue with automated analysis mode ignoring halves/tertiles/quartiles selection. (#647)
 -Rename "output" to "outcome" in automated analysis mode. (#649)
 -Rename "cohort" to "study group". (#650)
 -Remove purple title bar for automated analysis mode, use yellow highlight on "Auto" instead. (#654)
 -Remove requirement for user to click "OK" after each page of automated analysis. (#655)
 -Automatically load/select most recently-added study group when returning to Study Group Selector. (#657)
 -Don't allow user to save study groups with no outcome variables. (#658)
 -Change boxplot outcome variable label to be identical to the list on the left. (#662)
 -Change tab names in Data Analytics analysis panels. (#663)
 -Change Cohort Manager clustering defaults. (#664)
 -Display mean +/- SD in study group data tables. (#667)

1.0.9 (December 3, 2021)
 -Rename "inputs" to "predictors" in automated analysis mode.
 -Add support for observation vars as predictors in automated analysis mode. (#641)

1.0.8 (June 24, 2021)
 -Add option to create 3 clusters instead of 5. (#630)
 -Add TD/PIGD ratio calculation to ppmi.calculate_observations.py
 -Handle negative values in boxplots. (#635, #636)
 -Fix issues saving/loading cohorts with cross-sectional observation vars as predictors. (#637, #638)
 -Initial implementation of Automated Analysis mode (#283)
 -Fix cohort statistics for continuous cross-sectional observation variables used as predictors. (#642)
